# maestro-cloud

./: .dockerignore  .gitignore  .oxfmtrc.json  Cargo.toml  Dockerfile.admin  Dockerfile.dns  Dockerfile.probe  Dockerfile.tailscale  README.md  dns-proxy.py  flake.nix  package.json  pnpm-lock.yaml  tailscale-entrypoint.sh
controller/: Cargo.toml  maestro.schema.json
controller/scripts/: redeploy_bench.py
controller/src/: config.rs  default.jsonc  error.rs  main.rs  metrics.rs  signal.rs  validation.rs
controller/src/builder/: mod.rs  runner.rs  watcher.rs
controller/src/cli/: cancel.rs  mod.rs  redeploy.rs  rollout.rs  upgrade.rs
controller/src/deployment/: controller.rs  dns.rs  etcd.rs  events.rs  keys.rs  mod.rs  provider.rs  store.rs  types.rs
controller/src/logs/: collector.rs  datadog_sink.rs  http_sink.rs  mod.rs  sink.rs  store.rs
controller/src/probe/: healthcheck.rs  mod.rs
controller/src/runtime/: docker.rs  mod.rs  nerdctl.rs
controller/src/server/: mod.rs  types.rs
controller/src/service/: mod.rs
controller/src/supervisor/: controller.rs  etcd.rs  logs.rs  mod.rs  model.rs  worker.rs
controller/src/supervisor/config_source/: file.rs  mod.rs
controller/src/templates/: cluster.jsonc  maestro.jsonc
controller/src/tests/: main.rs
controller/src/tests/cli/: cancel.rs  mod.rs  rollout.rs
controller/src/tests/deployment/: etcd.rs
controller/src/tests/probe/: healthcheck.rs
controller/src/tests/runtime/: parity.rs
controller/src/tests/server/: mod.rs
controller/src/tests/supervisor/: etcd.rs  logs.rs
controller/src/utils/: certs.rs  cmd.rs  crypto.rs  mod.rs  nanoid.rs  secrets.rs  time.rs
examples/build-from-repo/: maestro.cluster.jsonc
examples/env-server/: Dockerfile  maestro.jsonc  server.py  test.py
sidecar/: Cargo.toml  Dockerfile
sidecar/src/: healthcheck.rs  main.rs  types.rs
ui/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/app/: app.css  env.d.ts  router.tsx
ui/app/components/: ClientOnly.tsx  TimelineChart.tsx
ui/app/lib/: api.ts  types.ts  ui.tsx
ui/app/routes/: __root.tsx  index.tsx  services.$serviceId.$tab.tsx
ui/app/routes/api/: $.ts
