[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
arc = { version = "0.1.0", path = "../../arc" }
async-trait = "0.1"
axum = "0.8"
backon = "1.6.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
etcd-client = "0.14"
json5 = "0.4"
libc = "0.2"
nanoid = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "fs"
] }
watchexec-supervisor = "4.0"
