[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.8"
backon = "1.6.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
etcd-client = "0.14"
flume = "0.12.0"
flate2 = "1.1"
json5 = "0.4"
libc = "0.2"
nanoid = "0.4"
os_pipe = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1.2"
strip-ansi-escapes = "0.2"
sysinfo = "0.38.4"
tokio = { version = "1.48", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "fs",
  "io-util"
] }
watchexec-supervisor = "4.0"
zeroize = { version = "1.8.2", features = ["derive"] }
aws-sdk-secretsmanager = "1.99.0"
aws-config = "1.8.13"
jsonwebtoken = "10.3.0"
