[package]
name = "maestro-sidecar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maestro-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
etcd-client = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
